feat: 로그인/회원가입, 유저 CRUD 기능 구현(#4)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,6 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=${DRIVER_CLASS}
+
+spring.social.kakao.client_id=${KAKAO_CLIENT_ID}
+spring.social.kakao.redirect_uri=${KAKAO_REDIRECT_URI}
