feat: AWS S3 이용하여 파일 업로드하기 (#8)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,8 @@ spring.datasource.driverClassName=${DRIVER_CLASS}
 
 spring.social.kakao.client_id=${KAKAO_CLIENT_ID}
 spring.social.kakao.redirect_uri=${KAKAO_REDIRECT_URI}
+
+spring.aws.access_key=${AWS_ACCESS_KEY}
+spring.aws.secret_key=${AWS_SECRET_KEY}
+spring.aws.s3.bucket=${AWS_BUCKET}
+spring.aws.region=${AWS_REGION}
