fix: CORS 허용 설정 추가

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,3 +10,6 @@ spring.aws.access_key=${AWS_ACCESS_KEY}
 spring.aws.secret_key=${AWS_SECRET_KEY}
 spring.aws.s3.bucket=${AWS_BUCKET}
 spring.aws.region=${AWS_REGION}
+
+front.local.url=${FRONT_LOCAL_URL}
+front.domain=${DOMAIN}
