--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,6 +5,8 @@ spring.datasource.driverClassName=${DRIVER_CLASS}
 
 spring.social.kakao.client_id=${KAKAO_CLIENT_ID}
 spring.social.kakao.redirect_uri=${KAKAO_REDIRECT_URI}
+spring.social.kakao.token_url=${KAKAO_TOKEN_URL}
+spring.social.kakao.user_url=${KAKAO_USER_URL}
 
 spring.aws.access_key=${AWS_ACCESS_KEY}
 spring.aws.secret_key=${AWS_SECRET_KEY}
@@ -13,3 +15,6 @@ spring.aws.region=${AWS_REGION}
 
 front.local.url=${FRONT_LOCAL_URL}
 front.domain=${DOMAIN}
+
+spring.jwt.secret.key=${SECRET_KEY}
+
