--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!--	CORS 설정    -->
 	<filter>
 		<filter-name>corsFilter</filter-name>
 		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
@@ -39,7 +40,23 @@
 		</init-param>
 		<init-param>
 			<param-name>cors.allowed.methods</param-name>
-			<param-value>GET, POST, PUT, DELETE, HEAD, OPTIONS</param-value>
+			<param-value>GET,HEAD,POST,PUT,DELETE,TRACE,OPTIONS,PATCH</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.allowed.headers</param-name>
+			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.exposed.headers</param-name>
+			<param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.support.credentials</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.preflight.maxage</param-name>
+			<param-value>10</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
